Prevent overlap of Jieba vocab with User vocab; vocab now can be up to 3 char length

--- a/webapp/static/css/viewVocab.css
+++ b/webapp/static/css/viewVocab.css
@@ -14,7 +14,7 @@
   font-size: 80px;
   line-height: 80px;
   height: 100px;
-  width: 200px;
+  width: 3em;
   margin: 0 auto;
 }
 
